--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,184 +6,147 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 
-  <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Data Science & Business Student | Warren Wilson College
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
-  <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="description" content="Portfolio of Kezong Lois Akundo, a Data Science, IT & Business student specializing in machine learning, data visualization, and AI applications." />
+  <meta name="keywords" content="Kezong Lois Akundo, Data Science, Business, R, Python, SQL, Machine Learning, Visualization, Grafana, Azure" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-
   <!-- ***** Header ***** -->
-
   <header class="header" role="banner" id="top">
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
-          <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
-          </li>
+          <li class="nav__item"><a href="#collaborations" class="nav__link">Collaborations</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
       </nav>
     </div>
     <div class="header__text-box row">
       <div class="header__text">
         <h1 class="heading-primary">
-          <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Kezong Lois Akundo</span>
         </h1>
-        <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Data Science & Business student based in Asheville, North Carolina.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
   </header>
 
   <main role="main">
-
     <!-- ***** Work ***** -->
-
     <section class="work" id="work">
       <div class="row">
         <h2>My Work</h2>
         <div class="work__boxes">
 
-          <!-- Each div with the work__box class is a project. -->
+          <div class="work__box">
+            <div class="work__text">
+              <h3>PolicyCON – Data Analyst Intern</h3>
+              <p>Created real-time dashboards in Grafana & Azure to visualize and monitor key policy metrics, configured PostgreSQL databases, and automated analysis workflows using Python & JupyterLab.</p>
+              <ul class="work__list">
+                <li>Grafana</li>
+                <li>Azure</li>
+                <li>PostgreSQL</li>
+                <li>Python</li>
+              </ul>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/project-policycon.png" class="work__image" alt="PolicyCON dashboard project" />
+              <img src="./images/project2-policycon.png" class="work__image" alt="PolicyCON dashboard project" />
+              <img src="./images/project3-policycon.png" class="work__image" alt="PolicyCON dashboard project" />
+            </div>
+          </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
-              <p>
-                A free Open Source Portfolio for anyone to use for free.
-              </p>
+              <h3>UNESCO – Biophilic Design Research</h3>
+              <p>Analyzed student learning outcomes using surveys & interviews; visualized results with Python (Matplotlib, Pandas) and R; built an interactive website with JavaScript to showcase findings.</p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
+                <li>Python</li>
+                <li>R</li>
                 <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Data Visualization</li>
               </ul>
-
-              <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
-              </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/project-unesco.png" class="work__image" alt="UNESCO research project" />
+              <img src="./images/project2-unesco.png" class="work__image" alt="UNESCO research project" />
+              <img src="./images/project3-unesco.png" class="work__image" alt="UNESCO research project" />
             </div>
           </div>
 
           <div class="work__box">
-            <div class="work__text">
-              <h3>Calculator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
+  <div class="work__text">
+    <h3>Viable Edu – Fintech Apprenticeship Program</h3>
+    <p>Studied financial markets and explored the role of technology in financial development. 
+       Participated in seminars with 50+ professionals and gained hands-on exposure to fintech concepts and applications.</p>
+    <ul class="work__list">
+      <li>Fintech</li>
+      <li>Financial Markets</li>
+      <li>Seminar Participation</li>
+      <li>Technology & Innovation</li>
+    </ul>
+  </div>
+  <div class="work__image-box">
+    <img src="./images/Screenshot 2024-03-18 103300.png" class="work__image" alt="Viable Edu Fintech project" />
+  </div>
+</div>
 
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
-            </div>
-          </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
+              <h3>PARAGONE AI Externship</h3>
+              <p>Applied AI-powered tools for interview analysis; processed and interpreted qualitative data with NLP and Git/GitHub collaboration; strengthened AI application & data handling skills.</p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Natural Language Processing</li>
+                <li>Git/GitHub</li>
+                <li>AI Applications</li>
               </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/project-ai.png" class="work__image" alt="AI externship project" />
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ***** Clients ***** -->
-
-    <section class="client" id="clients">
+    <!-- ***** Collaborations ***** -->
+    <section class="collaborations" id="collaborations">
       <div class="row">
-        <h2>Clients</h2>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+        <h2>Collaborations & Programs</h2>
+        <div class="collaborations__boxes">
+          <img src="./images/unesco.png" class="collaborations" alt="UNESCO" />
+          <img src="./images/paragone.png" class="collaborations__logo" alt="PARAGONE" />
+          <img src="./images/policycon.png" class="collaborations__logo" alt="PolicyCON" />
+          <img src="./images/viable-edu.png" class="collaborations__logo" alt="Viable Edu" />
         </div>
       </div>
     </section>
 
     <!-- ***** About ***** -->
-
     <section class="about" id="about">
       <div class="row">
         <h2>About Me</h2>
         <div class="about__content">
           <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I’m a Data Science, IT & Business student at Warren Wilson College (expected 2026). 
+              I specialize in machine learning, data visualization, and applied analytics using R, Python, SQL, Grafana, and Azure. 
+              I’ve worked with organizations like UNESCO and PolicyCON, and I’m passionate about leveraging technology to solve 
+              real-world problems at the intersection of data and business.
             </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="./_Job Akundo Resume.docx .pdf" class="btn">My Resume</a>
           </div>
-
           <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/lois-akundo.jpg" alt="Kezong Lois Akundo" />
           </div>
         </div>
       </div>
@@ -207,63 +154,25 @@
   </main>
 
   <!-- ***** Contact ***** -->
-
   <section class="contact" id="contact">
     <div class="row">
       <h2>Get in Touch</h2>
       <div class="contact__info">
-        <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
-        </p>
-        <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <p>If you’d like to collaborate, hire, or just chat about data science, AI, or business analytics, feel free to reach out. I’ll do my best to respond quickly!</p>
+        <a href="mailto:lakundo.f22@warren-wilson.edu" class="btn">lakundo.f22@warren-wilson.edu</a>
+        <a href="https://www.linkedin.com/in/kezong-akundo-284867256/" class="btn">LinkedIn Profile</a>
       </div>
     </div>
   </section>
 
   <!-- ***** Footer ***** -->
-
   <footer role="contentinfo" class="footer">
     <div class="row">
-      <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
-        <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
-            <img src="./images/github.svg" class="footer__social-image" alt="Github">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
-            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
-          </a>
-        </li>
+        <li><a href="https://github.com/yourgithub" title="GitHub Profile"><img src="./images/linkedin.svg" alt="Github"></a></li>
+        <li><a href="https://www.linkedin.com/in/kezong-akundo-284867256/" title="LinkedIn Profile"><img src="./images/linkedin.svg" alt="LinkedIn"></a></li>
       </ul>
-
-      <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
+      <p>&copy; 2020 - Template designed & developed by <a href="https://nisar.dev">Nisar</a>.</p>
     </div>
   </footer>
 
@@ -272,5 +181,6 @@
   </a>
   <script src="./index.js"></script>
 </body>
+
 
 </html>
