--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </ul>
   </div>
   <div class="work__image-box">
-    <img src="./images/Screenshot 2024-03-18 103300.png" class="work__image" alt="Viable Edu Fintech project" />
+    <img src="./images/screenshot-2024-03-18-103300.png.png" class="work__image" alt="Viable Edu Fintech project" />
   </div>
 </div>
 
@@ -152,6 +152,27 @@
       </div>
     </section>
   </main>
+
+ <!-- ***** Future Thesis ***** -->
+    <section class="thesis" id="thesis">
+      <div class="row">
+        <h2>Future Thesis</h2>
+        <div class="thesis__content">
+          <div class="thesis__text">
+            <p>
+              For my senior thesis, I plan to explore <strong>Bayesian and Statistical Modeling of Post-Hurricane Environmental Hazards and Their Effects on Respiratory Health</strong>. 
+              This project will combine data science and public health to analyze the impact of flooding, mold growth, and water contamination after 
+              <em>Hurricane Helene</em> in Asheville, NC. 
+            </p>
+           
+            </p>
+          </div>
+          <div class="thesis__image-box">
+            <img src="./images/Screenshot (17).png" alt="Thesis Data Visualization Concept" class="thesis__image"/>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- ***** Contact ***** -->
   <section class="contact" id="contact">
